@@ -1724,7 +1724,8 @@ create.desktop.icon=on
                   </imageobject>
                 </inlinemediaobject></entry>
 
-              <entry><para>This action zooms into the graph.</para></entry>
+              <entry><para>This action zooms into the graph. NOTE: "CTRL +"
+              key combination can be used to do the same.</para></entry>
             </row>
 
             <row>
@@ -1734,8 +1735,9 @@ create.desktop.icon=on
                   </imageobject>
                 </inlinemediaobject></entry>
 
-              <entry><para>This action displays graph in its actual
-              size.</para></entry>
+              <entry><para>This action displays graph in its actual size.
+              NOTE: "CTRL 1" key combination can be used to do the
+              same.</para></entry>
             </row>
 
             <row>
@@ -1745,7 +1747,8 @@ create.desktop.icon=on
                   </imageobject>
                 </inlinemediaobject></entry>
 
-              <entry><para>This action zooms out of the graph.</para></entry>
+              <entry><para>This action zooms out of the graph. NOTE: "CTRL -"
+              key combination can be used to do the same.</para></entry>
             </row>
 
             <row>
@@ -10413,6 +10416,12 @@ sign.alias=pvktmp:3852567a-45er-567y-w456-23456789sdft</programlisting>Sign
         <listitem>
           <para>Improved Open (new XPDL file) action to work in a standard
           way</para>
+        </listitem>
+
+        <listitem>
+          <para>"CTRL +", "CTRL -" and "CTRL 1" key combination now can be
+          used to "Zoom In", "Zoom Out" and "Make actual size" in the
+          graph.</para>
         </listitem>
 
         <listitem>
