@@ -1,4 +1,7 @@
 ###### TWE 5.1-1 RELEASED ######
+2014-06-20 Sasa Bojanic <sasaboy@together.at>
+   # "CTRL +", "CTRL -" and "CTRL 1" key combination now can be used to "Zoom In", "Zoom Out" and "Make actual size" in the graph.
+   
 2014-06-19 Sasa Bojanic <sasaboy@together.at>
    # Improved Open (new XPDL file) action to work in a standard way
    # Fix: Now properly rendering transition's diamond on the tail (it was not properly rendered when transition expression was set and then removed)
